--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
 
+<body style="background-color:#7289DA;">
+<title>Notice</title>
+<center> <h2>Notice:</h2>
+<p>The System Administrator has disabled <b>Directory Browsing</b></p>
+<p>Please, ask the <i>Person who linked you</i> to directly link you to the <u>Specified File</u>
+<p><font size="2"> If this was a mistake, please check if the file was moved/deleted</font>
+ 
+  
+ <!-- THIS CODE IS A SIMPLE-Made error page --!> \
+<!-- background-color may be changed --!> 
+<!-- DEVELOPED Soley by Ross M. rossm@theendlessweb.com --!> 
